cmake_minimum_required(VERSION 2.8)
project(example)
set(CMAKE_CXX_STANDARD 14)

find_package(PCL 1.10 REQUIRED)
find_package(pybind11 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_subdirectory(pybind11)
pybind11_add_module(uniformSample uniformSample_.cpp)
target_link_libraries(uniformSample PRIVATE pybind11::module ${PCL_LIBRARIES})
